--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ https://templatemo.com/tm-531-reflux
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
               <li><a href="#section1">About Me</a></li>
-              <!-- Re-enable these links later -->
-              <!-- <li><a href="#section2">What I’m good at</a></li>
-              <li><a href="#section3">My Work</a></li>
-              <li><a href="#section4">Contact Me</a></li> -->
+              <li><a href="#section2">What I’m good at</a></li>
+              <!-- Re-enable this links later -->
+              <!-- <li><a href="#section3">My Work</a></li> -->
+              <li><a href="#section4">Contact Me</a></li>
             </ul>
           </nav>
           <div class="social-network">
@@ -56,13 +56,10 @@ https://templatemo.com/tm-531-reflux
                 <a href="#"><i class="fa fa-twitter"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/carl-hernan/"><i class="fa fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-              </li>
-              <li>
-                <a href="#"><i class="fa fa-rss"></i></a>
+                <a href="https://github.com/Charl86"><i class="fa fa-github"></i></a>
               </li>
             </ul>
           </div>
