--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-531-reflux
                 <!-- Here is where I would have put a great sub title, IF I HAD ONE -->
                 <!-- <h4></h4> -->
                 <p>I have been involved in many programming side projects tackling topics such as maze generation algorithms, pathfinding algorithms and sequence generation programs. Programming languages and tools that I have used to work on these projects include but are not limited to Python, C / C++, R and JavaScript, together with HTML, CSS, Flask, Matplotlib and Bash.</p>
-                <p>Initially I was foreign languages major, studying languages such as French and German. Learning about languages actually gave me a decent ability to absorb and retain information about programming languages with ease. After getting increasingly interested about the computer science and programming, I decided to focus on this newfound passion and switch majors.</p>
+                <p>Initially I was foreign languages major, studying languages such as French and German. Learning about languages actually gave me a decent ability to absorb and retain information about programming with ease. After getting increasingly interested about the computer science and programming, I decided to focus on this newfound passion and switch majors.</p>
                 <!-- <div class="white-button">
                   <a href="#" title="There actually isn't more just yet">Read More</a>
                 </div> -->
@@ -177,52 +177,42 @@ https://templatemo.com/tm-531-reflux
     </section>
 
     <!-- Section for My Work. To be continued -->
-    <!-- <section class="section my-work" data-section="section3">
+    <section class="section my-work" data-section="section3">
       <div class="container">
         <div class="section-heading">
           <h2>My Work</h2>
           <div class="line-dec"></div>
-          <span>Aenean sollicitudin ex mauris, lobortis lobortis diam euismod sit
-            amet. Duis ac elit vulputate, lobortis arcu quis, vehicula
-            mauris.</span>
+          <span>Gallery related to my current work.</span>
         </div>
         <div class="row">
           <div class="isotope-wrapper">
             <form class="isotope-toolbar">
               <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                 <span>all</span></label>
-              <label><input type="radio" data-type="people" name="isotope-filter" />
+              <!-- <label><input type="radio" data-type="people" name="isotope-filter" />
                 <span>people</span></label>
               <label><input type="radio" data-type="nature" name="isotope-filter" />
                 <span>nature</span></label>
               <label><input type="radio" data-type="animals" name="isotope-filter" />
-                <span>animals</span></label>
+                <span>animals</span></label> -->
             </form>
             <div class="isotope-box">
               <div class="isotope-item" data-type="nature">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-01.jpg" alt="sq-sample26" />
-                  <figcaption>
-                    <a href="assets/images/portfolio-01.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>First Title</h4>
-                    <span>free to use our template</span>
-                  </figcaption>
+                <figure>
+                  <!-- TODO: Fix inline CSS -->
+                  <img src="assets/images/workspacecovid.jpg" alt="sq-sample26" style="height: 250px;">
+                  <figcaption class="mycaption">My workspace during covid</figcaption>
                 </figure>
               </div>
 
               <div class="isotope-item" data-type="people">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-02.jpg" alt="sq-sample26" />
-                  <figcaption>
-                    <a href="assets/images/portfolio-02.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Second Title</h4>
-                    <span>please tell your friends</span>
-                  </figcaption>
+                <figure>
+                  <img src="assets/images/complete_maze.png" alt="sq-sample26" />
+                  <figcaption class="mycaption">Output of maze generation program</figcaption>
                 </figure>
               </div>
 
+              <!--
               <div class="isotope-item" data-type="animals">
                 <figure class="snip1321">
                   <img src="assets/images/portfolio-03.jpg" alt="sq-sample26" />
@@ -269,12 +259,12 @@ https://templatemo.com/tm-531-reflux
                     <span>Donec eget massa ante</span>
                   </figcaption>
                 </figure>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section class="section contact-me" data-section="section4">
       <div class="container">
