Added extra picture and navigation section.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-531-reflux
               <li><a href="#section1">About Me</a></li>
               <li><a href="#section2">What I’m good at</a></li>
               <!-- Re-enable this links later -->
-              <!-- <li><a href="#section3">My Work</a></li> -->
+              <li><a href="#section3">My Work</a></li>
               <li><a href="#section4">Contact Me</a></li>
             </ul>
           </nav>
@@ -212,19 +212,14 @@ https://templatemo.com/tm-531-reflux
                 </figure>
               </div>
 
-              <!--
               <div class="isotope-item" data-type="animals">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-03.jpg" alt="sq-sample26" />
-                  <figcaption>
-                    <a href="assets/images/portfolio-03.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Item Third</h4>
-                    <span>customize anything</span>
-                  </figcaption>
+                <figure>
+                  <img src="assets/images/sampleOutput.png" alt="sq-sample26" />
+                  <figcaption class="mycaption">Sorting algorithms benchmarks</figcaption>
                 </figure>
               </div>
 
+              <!--
               <div class="isotope-item" data-type="people">
                 <figure class="snip1321">
                   <img src="assets/images/portfolio-04.jpg" alt="sq-sample26" />
