--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@ https://templatemo.com/tm-531-reflux
             <ul class="main-menu">
               <li><a href="#section1">About Me</a></li>
               <li><a href="#section2">What I’m good at</a></li>
-              <!-- Re-enable this links later -->
               <li><a href="#section3">My Work</a></li>
-              <li><a href="#section4">Contact Me</a></li>
+              <!-- <li><a href="#section4">Contact Me</a></li> -->
             </ul>
           </nav>
           <div class="social-network">
@@ -261,57 +260,6 @@ https://templatemo.com/tm-531-reflux
       </div>
     </section>
 
-    <section class="section contact-me" data-section="section4">
-      <div class="container">
-        <div class="section-heading">
-          <h2>Contact Me</h2>
-          <div class="line-dec"></div>
-          <!-- Brief description for contacting me -->
-          <!-- <span></span> -->
-        </div>
-        <div class="row">
-          <div class="right-content">
-            <div class="container">
-              <form id="contact" action="" method="post">
-                <div class="row">
-                  <div class="col-md-6">
-                    <fieldset>
-                      <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-6">
-                    <fieldset>
-                      <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
-                        required=""></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="button">
-                        Send Message
-                      </button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
   </div>
 
   <!-- Scripts -->
